# claude-ipc

./: .gitignore  README.md  bunfig.toml  package.json  pyproject.toml  tsconfig.json
.claude/conventions/: env-access.md
.claude/output/: 20260531-tty-guard-handoff.md
.claude/output/20260529-skeptical-review/: review.md
.claude/output/20260530-tabtitle-review/: review.md
.claude/skills/: runtime-notes.md
docs/: 00-host-facts.md  01-spec.md  02-behavior.md  03-architecture.md  04-technical-implementation.md  05-roadmap.md  06-security-and-ops.md
docs/notes/: honker-spike.md  tab-title-badge.md
hooks/: session-start.sh  stop.sh  ups.sh
integrations/i-dream/: ACTIVATION.md  extract-events.sh
integrations/i-dream/dream/: prompt.md
integrations/tab-title/: README.md
launchd/: com.alcatraz.claude-ipc.plist
scripts/: install-launchd.sh  install.ts
src/: badge.ts  cli.ts  client.ts  config.ts  index.ts  mcpServer.ts  models.ts  monitor.ts  protocol.ts  tools.ts
src/broker/: log.ts  registry.ts  router.ts  server.ts  sweeper.ts
src/claude_ipc/: __init__.py  cli.py
src/hooks/: sessionStart.ts  shared.ts  stop.ts  userPromptSubmit.ts
src/storage/: base.ts  memoryBackend.ts  sqliteBackend.ts
tests/: badge.test.ts  broker.test.ts  cli.test.ts  correlation.test.ts  hardening.test.ts  hooks.test.ts  identity.test.ts  log.test.ts  protocol.test.ts  resilience.test.ts  setup.ts  smoke.test.ts  storage.test.ts  tools.test.ts
